# terragrunt-devops

./: .env.development  .gitignore  .pre-commit-config.yaml  .python-version  .tflint.hcl  CODEOWNERS  LICENSE  README.md  README.rst  pyproject.toml  requirements.txt  sonar-project.properties  tox.ini
.github/ISSUE_TEMPLATE/: config.yaml
.github/workflows/: main.yaml  sonar.yaml
docs/: conf.py  index.md  index.rst
k12s/: kustomization.yaml
k12s/app-of-apps/base/: app-of-apps.yaml
k12s/app-of-apps/overlays/gke-production-default/: app-of-apps.yaml
k12s/app-of-apps/overlays/gke-staging-default/: app-of-apps.yaml
k12s/app-of-apps/overlays/minikube-development-default/: app-of-apps.yaml  kustomization.yaml  storageclass.yaml
k12s/app-of-apps/overlays/minikube-development-demo/: app-of-apps.yaml  kustomization.yaml
k12s/argocd/base/: kustomization.yaml
k12s/charts/kiali-operator-1.70.0/kiali-operator/: Chart.yaml  values.yaml
k12s/charts/loki-distributed-0.69.16/loki-distributed/: Chart.yaml
k12s/charts/rook-ceph-v1.13.2/rook-ceph/: Chart.yaml
k12s/charts/tempo-distributed-1.4.8/tempo-distributed/: Chart.yaml
k12s/knative-eventing/base/: kustomization.yaml
k12s/knative-serving/base/: knative-serving.yaml  kustomization.yaml
live/: terragrunt.hcl
live/_envcommon/: gke.hcl  minikube.hcl
live/development/local/: region.hcl
live/development/local/minikube/: platform.hcl
live/development/local/minikube-kvm2/: terragrunt.hcl
live/development/local/minikube/default/: profile.hcl
live/development/local/minikube/default/dev-local-docker/: terragrunt.hcl
live/development/local/minikube/default/dev-local-hyperkit/: terragrunt.hcl
live/development/local/minikube/default/dev-local-kvm2/: .terraform.lock.hcl  terragrunt.hcl
live/development/local/minikube/default/dev-local-qemu2/: README.md  terragrunt.hcl
live/development/local/minikube/demo/: profile.hcl
live/development/local/minikube/demo/dev-local-docker/: terragrunt.hcl
live/development/local/minikube/demo/dev-local-hyperkit/: terragrunt.hcl
live/development/local/minikube/demo/dev-local-kvm2/: .terraform.lock.hcl  terragrunt.hcl
live/development/local/minikube/demo/dev-local-qemu2/: terragrunt.hcl
live/development/local/minikube/dev-local-kvm2/: .terraform.lock.hcl  terragrunt.hcl
live/development/local/minikube/dev-local-kvm2-default/: terragrunt.hcl
live/development/local/minikube/dev-local-kvm2-demo/: terragrunt.hcl
live/development/local/minikube/dev-local-qemu2/: .terraform.lock.hcl  terragrunt.hcl
live/development/local/minikube/dev-local-qemu2-default/: .terraform.lock.hcl  terragrunt.hcl
live/development/local/minikube/dev-local-qemu2-demo/: terragrunt.hcl
live/development/local/minikube/kvm2/: .terraform.lock.hcl  terragrunt.hcl
live/development/local/minikube/qemu2/: .terraform.lock.hcl  terragrunt.hcl
live/kustomizations/argocd/base/: kustomization.yaml
live/kustomizations/knative-serving/base/: knative-serving.yaml
live/production/us-east1-b/: region.hcl
live/production/us-east1-b/gke/: platform.hcl
live/production/us-east1-b/gke/default/prd-us-east1-b-gke/: README.md
live/production/us-east1-b/gke/prd-us-east1-b-gke-default/: terragrunt.hcl
live/staging/us-east1-b/gke/stg-us-east1-b-gke/: terragrunt.hcl
templates/charts/app-of-apps/: values.yaml
templates/charts/app-of-apps/templates/: _helpers.tpl  _values.tpl  project.yaml
templates/charts/app-of-apps/templates/applications/: argo-cd.yaml  cert-manager.yaml  istio-base.yaml  istio-ingress.yaml  istiod.yaml  kiali-operator.yaml  knative-eventing.yaml  knative-operator.yaml  knative-serving.yaml  kube-prometheus-stack.yaml  loki-distributed.yaml  minio.yaml  promtail.yaml  strimzi-kafka-operator.yaml  tempo-distributed.yaml
templates/charts/app-of-apps/templates/certificates/: argo-cd-certificate.yaml  grafana-certificate.yaml  kiali-certificate.yaml  minio-certificate.yaml
templates/charts/app-of-apps/templates/issuers/: selfsigned-issuer.yaml
templates/kustomizations/knative-eventing/base/: knative-eventing.yaml
templates/modules/manifest/: .terraform.lock.hcl  README.rst  main.tf  variables.tf
templates/modules/minikube-cluster/: .terraform.lock.hcl  README.rst  backend.tf  cluster.tf  main.tf  manifest.tf  outputs.tf  provider.tf  variables.tf
tests/: conftest.py  test_example.py  test_gke.py  test_minikube.py
(+14 files in other folders)
