[tool.poetry]
name = "terragrunt-devops"
version = "0.1.0"
description = ""
authors = ["caerulescens <caerulescens.github@proton.me>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
tftest = "^1.8.5"
coverage = {extras = ["toml"], version = "^7.3.2"}
black = "^23.9.1"
ruff = "^0.0.292"
mypy = "^1.6.0"
sphinx = "^7.2.6"
cython = "^3.0.3"
pre-commit = "^3.4.0"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]

[tool.coverage.report]
fail_under = 90

[tool.black]
target-version = ["py311"]
line-length = 88

[tool.ruff]
target-version = "py311"
select = []

[tool.ruff.pydocstyle]
convention = "pep257"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
