[tool.poetry]
name = "terragrunt-devops"
version = "0.1.0"
description = ""
authors = ["caerulescens <caerulescens.github@proton.me>"]
readme = "README.rst"
packages = [{include = "terragrunt_devops", from = "src"}]
repository = "https://github.com/generic-infrastructure/terragrunt-devops"
keywords = ["terragrunt", "devops"]
classifiers = ["Development Status :: 2 - Pre-Alpha"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
tftest = "^1.8.5"
coverage = {extras = ["toml"], version = "^7.3.2"}
tox = "^4.11.4"
black = "^23.9.1"
ruff = "^0.1.7"
mypy = "^1.7.1"
sphinx = "^7.2.6"
pydocstyle = "^6.3.0"
cython = "^3.0.3"
pre-commit = "^3.4.0"

[tool.pytest.ini_options]
minversion = "7.1.1"
addopts = "-ra -q"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 50

[tool.coverage.html]
directory = "coverage_html_report"

[tool.black]
line-length = 88
target-version = ["py310", "py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]
select = ["F", "E", "W", "C90", "S", "I", "N", "D", "UP"]
ignore = ["D100", "D104", "D106"]

[tool.ruff.pydocstyle]
convention = "pep257"

[tool.mypy]
python_version = "3.11"
files = ["src", "tests"]
plugins = ["pydantic.mypy"]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
